Fixing layout bug that was causing the horizontal splitter disappears in IE.
git-svn-id: http://fbug.googlecode.com/svn/lite@4896 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/branches/firebug1.3/skin/xp/firebug.css
+++ b/branches/firebug1.3/skin/xp/firebug.css
@@ -822,7 +822,7 @@
     margin-top: 1px;
     padding-left: 3px;
     background: #fafafa;
-    border-color: #888;
+    border: 1px inset #fff;
     width: 250px;
 }
 
@@ -1308,7 +1308,7 @@ a.fbTab:hover .fbTabR {
 /* splitters 
 *************************************************************************************************/
 #fbHSplitter {
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
     width: 100%;
